set empty-basket-message-container white space wrap to avoid empty basket message container overflow

--- a/main.css
+++ b/main.css
@@ -227,9 +227,14 @@ body #save-info-container label {
   text-align: center;
   margin-top: -2rem;
   margin-bottom: 2rem;
+  white-space: pre-line;
+  width: 100%;
 }
 #basket #empty-basket-message-container h2 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
+}
+#basket #empty-basket-message-container p {
+  font-size: 0.7rem;
 }
 
 #basket #basket-item-1-quantity {
